Landing page fase 1, [ADD] Bootstrap 5.0.1

--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
+    "@popperjs/core": "^2.9.2",
+    "bootstrap": "^5.0.1",
     "ngx-cookie-service": "^11.0.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
