--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
     "@popperjs/core": "^2.9.2",
     "bootstrap": "^5.0.1",
+    "mapbox-gl": "^2.4.0",
     "ngx-cookie-service": "^11.0.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
