--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bootstrap": "^5.0.1",
     "mapbox-gl": "^2.4.0",
     "ngx-cookie-service": "^11.0.2",
+    "ngx-socket-io": "^4.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
@@ -38,6 +39,7 @@
     "@angular/cli": "~11.1.1",
     "@angular/compiler-cli": "~11.1.0",
     "@types/jasmine": "~3.6.0",
+    "@types/mapbox-gl": "^2.4.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
